--- a/DEMO/index.html
+++ b/DEMO/index.html
@@ -80,7 +80,11 @@
                 <div id="battle-instruct" class="text-lg text-gray-200 mb-2">バトル開始ボタンを押してください</div>
                 <div id="battle-timer" class="text-4xl font-mono text-white mb-4">00:10</div>
                 <button id="battle-start-btn" class="btn">START</button>
-                <div id="battle-mouse" class="hidden mt-4 cursor-pointer select-none p-8 rounded bg-gradient-to-r from-gray-800 to-gray-700">連打エリア（ここを連打）</div>
+                <button id="battle-start-btn-2p" class="btn hidden">２P START</button>
+                <div id="battle-mouse" class="hidden mt-4 cursor-pointer select-none p-8 rounded bg-gradient-to-r from-gray-800 to-gray-700 relative overflow-hidden">
+                    <div class="text-center mb-2">連打エリア（ここを連打）</div>
+                    <div id="click-counter" class="text-2xl font-mono text-cyan-300">クリック数: 0</div>
+                </div>
                 <div class="mt-6">
                     <button id="battle-exit" class="btn btn-secondary">戻る</button>
                 </div>
@@ -111,12 +115,12 @@
         <div id="screen-instructions" class="screen hidden card space-y-6">
             <h2 class="text-3xl font-bold text-center font-orbitron">experience</h2>
             <div class="text-left space-y-4 text-gray-300 font-sans">
-                <p>このシステムは、Webカメラに映ったあなたの姿から、秘められた戦闘能力指数「POWER SCAN」をリアルタイムに算出します。</p>
+                <p>このカメラで撮影したキミの姿から秘められた<strong class="text-white">戦闘力</strong>測ることができるぞ！</p>
                 <ul class="list-disc list-inside space-y-2 pl-4">
                     <li><strong>ポーズ:</strong> 体を大きく見せたり、構えを低くするとスコアが上がります。</li>
                     <li><strong>アクション:</strong> 素早い動きを繰り出すと、<strong class="text-white">アクションボーナス</strong>が加算されます！</li>
                 </ul>
-                <p>最高のポーズとアクションで、ハイスコアを目指してください！</p>
+                <p>　　＊なお「戦闘力」は科学的根拠は一切ない仮想の数値なので悪しからず</p>
             </div>
             <div class="flex gap-4 justify-center pt-4">
                 <button id="btn-back-to-title-1" class="btn btn-secondary">もどる</button>
