--- a/DEMO/index.html
+++ b/DEMO/index.html
@@ -114,13 +114,13 @@
 
         <div id="screen-instructions" class="screen hidden card space-y-6">
             <h2 class="text-3xl font-bold text-center font-orbitron">experience</h2>
-            <div class="text-left space-y-4 text-gray-300 font-sans">
-                <p>このカメラで撮影したキミの姿から秘められた<strong class="text-white">戦闘力</strong>測ることができるぞ！</p>
+            <div class="text-reft space-y-4 text-gray-300 font-sans">
+                <p cellpacing="10">  このカメラで撮影したキミの姿から秘められた<strong class="text-white">戦闘力</strong>測ることができるぞ！</p>
                 <ul class="list-disc list-inside space-y-2 pl-4">
                     <li><strong>ポーズ:</strong> 体を大きく見せたり、構えを低くするとスコアが上がります。</li>
                     <li><strong>アクション:</strong> 素早い動きを繰り出すと、<strong class="text-white">アクションボーナス</strong>が加算されます！</li>
                 </ul>
-                <p>　　＊なお「戦闘力」は科学的根拠は一切ない仮想の数値なので悪しからず</p>
+                <p class="text-center">＊なお「戦闘力」は科学的根拠は一切ない仮想の数値なので悪しからず</p>
             </div>
             <div class="flex gap-4 justify-center pt-4">
                 <button id="btn-back-to-title-1" class="btn btn-secondary">もどる</button>
