--- a/DEMO/ranking.html
+++ b/DEMO/ranking.html
@@ -17,7 +17,7 @@
     <div class="container mx-auto p-4 max-w-5xl w-full">
 
         <div id="screen-ranking" class="screen card space-y-6">
-            <h2 class="text-3xl font-bold text-center font-orbitron">POWER SCAN ランキング</h2>
+            <h2 class="text-3xl font-bold text-center font-arial black">POWER SCAN ランキング</h2>
             
             <div id="ranking-list" class="space-y-3">
                 </div>
