--- a/DEMO/ranking.html
+++ b/DEMO/ranking.html
@@ -27,6 +27,12 @@
             </div>
         </div>
 
+        <!-- 画像拡大モーダル -->
+        <div id="img-modal" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50 p-4">
+            <button id="img-modal-close" class="absolute top-4 right-4 btn btn-secondary">閉じる</button>
+            <img id="img-modal-img" src="" alt="preview" class="max-w-full max-h-full rounded-lg shadow-2xl border border-gray-700" />
+        </div>
+
     </div>
     <script src="js/ranking.js" type="module" defer></script>
 </body>
