--- a/DEMO/measurement.html
+++ b/DEMO/measurement.html
@@ -60,7 +60,7 @@
 
         <div id="name-modal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-70 z-50 hidden">
             <div class="card max-w-xs w-full text-center p-8 relative">
-                <h2 class="text-2xl font-orbitron mb-4">キミの名前を入力してくれ！</h2>
+                <h2 class="text-2xl font-fantasy mb-4">キミの名前を入力してくれ！</h2>
                 <input id="input-player-name" type="text" maxlength="12" class="w-full p-2 rounded bg-gray-900 text-green-400 border-2 border-green-400 text-xl font-mono mb-4 focus:outline-none focus:ring-2 focus:ring-cyan-400" placeholder="YOUR NAME" autocomplete="off">
                 <img id="save-preview" src="" alt="preview" style="display:block;margin:10px auto 0 auto;width:160px;height:120px;object-fit:cover;border-radius:8px;" />
                 <div class="flex gap-4 justify-center">
