--- a/DEMO/measurement.html
+++ b/DEMO/measurement.html
@@ -28,6 +28,7 @@
                         <div class="status-box">
                             <p>SYSTEM STATUS: <span id="socket-status" class="text-yellow-400">CONNECTING...</span></p>
                             <p>TARGET: <span class="text-white">LIVE ANALYSIS</span></p>
+                            <p class="mt-1 text-sm">LM表示: <button id="toggle-landmarks" class="px-2 py-1 rounded bg-gray-700 hover:bg-gray-600 text-xs">OFF</button></p>
                         </div>
                     </div>
 
