--- a/DEMO/measurement.html
+++ b/DEMO/measurement.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Orbitron:wght@900&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white font-tech-mono antialiased flex items-center justify-center min-h-screen">
-    <audio id="se-button" src="sfx/button.mp3" preload="auto"></audio>
-    <audio id="se-roulette" src="sfx/roulette.mp3" preload="auto"></audio>
-    <audio id="se-roulette2" src="sfx/roulette2.mp3" preload="auto"></audio>
+    <audio id="se-button" src="src/sfx/button.mp3" preload="auto"></audio>
+    <audio id="se-roulette" src="src/sfx/roulette.mp3" preload="auto"></audio>
+    <audio id="se-roulette2" src="src/sfx/roulette2.mp3" preload="auto"></audio>
 
     <div class="container mx-auto p-4 max-w-5xl w-full">
         <div id="screen-measurement" class="screen">
