--- a/DEMO/index.html
+++ b/DEMO/index.html
@@ -110,10 +110,10 @@
             <div class="text-center space-y-4 text-gray-300 font-sans">
                 <p> <strong class="text-white"> このカメラで撮影したキミの姿から秘められた戦闘力測ることができるぞ！</strong></p>
                 <ul class="list-disc list-inside space-y-2 pl-4">
-                    <p> <strong class="text-white"> カメラの前でポーズを決めると戦闘力が上がるかもしれないぞ！</strong></p>
+                    <p> <strong class="text-white"> カメラの前でポーズを決めると戦闘力が上がるかもしれない！</strong></p>
                     <p><strong class="text-white">キミなりの最高の決めポーズをするんだ！</strong></p>
                 </ul>
-                <p>＊なお「戦闘力」は科学的根拠は一切ない仮想の数値なので悪しからず</p>
+                <p>＊なお「戦闘力」は仮想の数値なので鵜呑みにはしないようお願いします。</p>
             </div>
             <div class="flex gap-4 justify-center pt-4">
                 <button id="btn-back-to-title-1" class="btn btn-secondary">もどる</button>
